package.json changed

--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "lic",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test"
+  },
   "dependencies": {
     "@google-cloud/vision": "^5.3.4"
   }
